# ksef

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
src/ksef_deel/: config.py  deel_parser.py  invoice_model.py  invoice_xml.py  ksef_fetch.py  ksef_upload.py  main.py  validator.py
tests/: conftest.py  test_invoice_xml.py  test_ksef_integration.py
