[project]
name = "ksef-deel"
version = "0.1.0"
description = "Upload Deel.com invoices to KSeF (Krajowy System e-Faktur)"
requires-python = ">=3.12"
dependencies = [
    "ksef2>=0.1.0",
    "lxml>=5.0",
    "pdfplumber>=0.11",
]

[project.scripts]
ksef-deel = "ksef_deel.main:main"

[project.optional-dependencies]
dev = ["ruff>=0.15", "pytest>=9.0", "mypy>=1.19", "lxml-stubs>=0.5", "Faker>=40.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["SIM108"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the KSeF TEST environment (deselect with '-m not integration')",
]

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "ksef2.*"]
ignore_missing_imports = true
